[dyad] Replaced custom 'Where to Watch' with official JustWatch widget. - wrote 3 file(s), deleted 3 file(s)

--- a/index.html
+++ b/index.html
@@ -13,5 +13,11 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <!-- Add JustWatch Widget Script -->
+    <script 
+      type="text/javascript" 
+      src="https://widget.justwatch.com/justwatch-widget.js"
+      async
+    ></script>
   </body>
 </html>
