--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Open Graph / Facebook / LinkedIn Tags -->
     <meta property="og:title" content="Georgi's Movie Collection" />
     <meta property="og:description" content="A minimalist collection of cinematic gems." />
-    <meta property="og:image" content="https://your-app-domain.com/favicon.png" /> <!-- IMPORTANT: Replace 'https://your-app-domain.com' with your actual deployed website URL -->
+    <meta property="og:image" content="https://your-app-domain.com/movie-reel-logo.svg" /> <!-- IMPORTANT: Replace 'https://your-app-domain.com' with your actual deployed website URL -->
     <meta property="og:url" content="https://your-app-domain.com/" /> <!-- IMPORTANT: Replace 'https://your-app-domain.com' with your actual deployed website URL -->
     <meta property="og:type" content="website" />
 
@@ -20,7 +20,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Georgi's Movie Collection" />
     <meta name="twitter:description" content="A minimalist collection of cinematic gems." />
-    <meta name="twitter:image" content="https://your-app-domain.com/favicon.png" /> <!-- IMPORTANT: Replace 'https://your-app-domain.com' with your actual deployed website URL -->
+    <meta name="twitter:image" content="https://your-app-domain.com/movie-reel-logo.svg" /> <!-- IMPORTANT: Replace 'https://your-app-domain.com' with your actual deployed website URL -->
   </head>
 
   <body>
