[dyad] Updated the fb:app_id in index.html. - wrote 1 file(s)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:image" content="https://my-movie-collection.pages.dev/movie-reel-logo.png" />
     <meta property="og:url" content="https://my-movie-collection.pages.dev/" />
     <meta property="og:type" content="website" />
-    <meta property="fb:app_id" content="YOUR_FACEBOOK_APP_ID" /> {/* Add this line */}
+    <meta property="fb:app_id" content="982426411944301" />
 
     <!-- Twitter Card Tags -->
     <meta name="twitter:card" content="summary_large_image" />
